Return paginated list (#22)
